<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:id="@+id/question_text_view"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:id="@+id/true_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:id="@+id/false_button"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cheat_button"
        android:text="@string/cheat_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/cheats_remaining"
        android:text="@string/cheats_remaining_3"
        />

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previous_button"
        android:text="@string/previous_button"
        android:drawableLeft="@drawable/arrow_left"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_button"
        android:text="@string/next_button"
        android:drawableRight="@drawable/arrow_right"
        />

</LinearLayout>


</LinearLayout>
